# st-graph

./: MANIFEST.in  pyproject.toml
examples/: ego_graph.py  iris_decision_tree.py  karate_club_graph.py
src/st_graph/: ConfigBuilder.py  __init__.py  algos.py  data.py  triple.py  triplestore.py
src/st_graph/frontend/: package-lock.json  package.json
